--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,457 +1,457 @@
 html {
-  font-size: 85%;
-  box-sizing: border-box;
+    font-size: 85%;
+    box-sizing: border-box;
 }
 
 *,
 :after,
 :before {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body {
-  background-color: #333;
-  color: #fff;
-  -webkit-font-smoothing: antialiased;
+    background-color: #333;
+    color: #fff;
+    -webkit-font-smoothing: antialiased;
 }
 
 .navbar nav .button-collapse {
-  padding: 0 10px;
+    padding: 0 10px;
 }
 
 .navbar nav .button-collapse i {
-  font-size: 2.7rem;
-  height: 56px;
-  line-height: 56px;
+    font-size: 2.7rem;
+    height: 56px;
+    line-height: 56px;
 }
 
 .navbar nav ul a {
-  font-weight: 700;
-  font-size: 15px;
+    font-weight: 700;
+    font-size: 15px;
 }
 
 .navbar nav .brand-logo {
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0.2s, height 0.2s, opacity 0.2s linear;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.2s, height 0.2s, opacity 0.2s linear;
 }
 
 .navbar nav .brand-logo img {
-  height: 0;
-  transition: height 0.2s linear;
-  margin-top: -13px;
+    height: 0;
+    transition: height 0.2s linear;
+    margin-top: -13px;
 }
 
 .navbar nav.pinned .brand-logo {
-  visibility: visible;
-  opacity: 1;
+    visibility: visible;
+    opacity: 1;
 }
 
 .navbar nav.pinned .brand-logo img {
-  transition: none;
-  height: 118px;
+    transition: none;
+    height: 118px;
 }
 
 .navbar .nav-wrapper {
-  padding: 0 20px;
+    padding: 0 20px;
 }
 
 .navbar .side-nav {
-  border-right: 10px solid #fff;
+    border-right: 10px solid #fff;
 }
 
 .navbar .side-nav li {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .navbar .side-nav li a {
-  font-size: 24px;
-  font-weight: 700;
-  color: #fff;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.5);
+    font-size: 24px;
+    font-weight: 700;
+    color: #fff;
+    text-shadow: 0 1px rgba(0, 0, 0, 0.5);
 }
 
 .navbar .side-nav .about {
-  background-color: #1e859a;
+    background-color: #1e859a;
 }
 
 .navbar .side-nav .aptitud-day {
-  background-color: #7a9752;
+    background-color: #7a9752;
 }
 
 .navbar .side-nav .contact {
-  background-color: #febe10;
+    background-color: #febe10;
 }
 
 .navbar .side-nav .fellows {
-  background-color: #f63;
+    background-color: #f63;
 }
 
 .navbar .side-nav .aptigram {
-  background-color: #784e90;
+    background-color: #784e90;
 }
 
 .parallax-container {
-  position: fixed;
-  width: 100%;
-  height: 450px;
-  z-index: -1;
+    position: fixed;
+    width: 100%;
+    height: 450px;
+    z-index: -1;
 }
 
 .parallax-container .parallax img {
-  display: block;
+    display: block;
 }
 
-main>section {
-  max-height: 250px;
-  min-height: 200px;
-  overflow-y: hidden;
-  position: relative;
-  transition: max-height 0.5s ease;
+main > section {
+    max-height: 250px;
+    min-height: 200px;
+    overflow-y: hidden;
+    position: relative;
+    transition: max-height 0.5s ease;
 }
 
 #logo {
-  max-height: none;
+    max-height: none;
 }
 
 #contact {
-  background-color: #febe10;
+    background-color: #febe10;
 }
 
-main>section:last-child {
-  border-bottom: 0 none;
+main > section:last-child {
+    border-bottom: 0 none;
 }
 
 section h2 {
-  margin-top: 20px;
-  text-align: center;
-  text-transform: lowercase;
-  font-family: 'Comic Sans MS', 'Comic Sans', 'Comic Neue', cursive, sans-serif;
-  font-size: 80px;
-  text-shadow: 0 7px 0 rgba(0, 0, 0, 0.15);
-  -webkit-font-smoothing: initial;
+    margin-top: 20px;
+    text-align: center;
+    text-transform: lowercase;
+    font-family: sans-serif;
+    font-size: 80px;
+    text-shadow: 0 7px 0 rgba(0, 0, 0, 0.15);
+    -webkit-font-smoothing: initial;
 }
 
 #logo,
 .row {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 #logo {
-  min-height: 0;
-  padding: 0;
+    min-height: 0;
+    padding: 0;
 }
 
 #logo .responsive-img {
-  max-height: 280px;
-  margin: 40px auto 10px;
-  display: block;
+    max-height: 280px;
+    margin: 40px auto 10px;
+    display: block;
 }
 
 #logo .parallax-container {
-  height: 280px;
+    height: 280px;
 }
 
 #logo .links {
-  float: none;
-  width: auto;
-  margin-bottom: 30px;
-  margin-left: -20px;
-  margin-right: -20px;
-  padding: 0;
+    float: none;
+    width: auto;
+    margin-bottom: 30px;
+    margin-left: -20px;
+    margin-right: -20px;
+    padding: 0;
 }
 
 #logo .links img {
-  height: 50px;
+    height: 50px;
 }
 
 #about {
-  background-color: #1e859a;
+    background-color: #1e859a;
 }
 
 #about h2 {
-  -webkit-transform: rotate(1deg);
-  transform: rotate(1deg);
+    -webkit-transform: rotate(1deg);
+    transform: rotate(1deg);
 }
 
 #aptigram h2,
 #aptitud-day h2 {
-  -webkit-transform: rotate(-2deg);
+    -webkit-transform: rotate(-2deg);
 }
 
 #aptitud-day {
-  background-color: #7a9752;
+    background-color: #7a9752;
 }
 
 #aptitud-day h2 {
-  transform: rotate(-2deg);
+    transform: rotate(-2deg);
 }
 
 #aptitud-day .card-panel {
-  background-color: #eee;
-  color: #000;
+    background-color: #eee;
+    color: #000;
 }
 
 #contact h2 {
-  -webkit-transform: rotate(1deg);
-  transform: rotate(1deg);
+    -webkit-transform: rotate(1deg);
+    transform: rotate(1deg);
 }
 
 #contact .card {
-  background-color: #eee;
-  color: #000;
+    background-color: #eee;
+    color: #000;
 }
 
 #contact .card .card-title {
-  font-weight: 200;
-  text-transform: uppercase;
-  margin-top: 0;
+    font-weight: 200;
+    text-transform: uppercase;
+    margin-top: 0;
 }
 
 #contact .card .card-action {
-  background-color: rgba(0, 0, 0, 0.05);
-  z-index: 0;
+    background-color: rgba(0, 0, 0, 0.05);
+    z-index: 0;
 }
 
 #contact .card .card-action a {
-  color: #039be5 !important;
+    color: #039be5 !important;
 }
 
 #contact .links {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 #contact .links img {
-  height: 60px;
+    height: 60px;
 }
 
 #fellows {
-  background-color: #f63;
+    background-color: #f63;
 }
 
 #fellows h2 {
-  -webkit-transform: rotate(3deg);
-  transform: rotate(3deg);
+    -webkit-transform: rotate(3deg);
+    transform: rotate(3deg);
 }
 
 #fellows #fellow-list {
-  margin: 0 0.75rem;
-  padding-bottom: 50px;
+    margin: 0 0.75rem;
+    padding-bottom: 50px;
 }
 
 @media only screen and (min-width: 601px) {
-  #fellows #fellow-list {
-    column-count: 2;
-  }
+    #fellows #fellow-list {
+        column-count: 2;
+    }
 }
 
 @media only screen and (min-width: 901px) {
-  #fellows #fellow-list {
-    column-count: 3;
-  }
+    #fellows #fellow-list {
+        column-count: 3;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
-  #fellows #fellow-list {
-    column-count: 4;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
+    #fellows #fellow-list {
+        column-count: 4;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
 }
 
 #fellows .fellow {
-  display: inline-block;
-  vertical-align: bottom;
+    display: inline-block;
+    vertical-align: bottom;
 }
 
 #fellows .fellow .card-panel {
-  overflow: hidden;
-  padding: 0;
-  background-color: #eee;
-  color: #000;
+    overflow: hidden;
+    padding: 0;
+    background-color: #eee;
+    color: #000;
 }
 
 #fellows .fellow .card-panel .info-container .info {
-  padding: 15px 15px 0;
-  margin-bottom: 0;
+    padding: 15px 15px 0;
+    margin-bottom: 0;
 }
 
 #fellows .fellow .card-panel .info-container .heading {
-  display: table;
-  margin: -15px 0 15px -15px;
+    display: table;
+    margin: -15px 0 15px -15px;
 }
 
 #fellows .fellow .card-panel .info-container .heading div {
-  display: table-cell;
-  width: 30%;
+    display: table-cell;
+    width: 30%;
 }
 
 #fellows .fellow .card-panel .info-container .heading div img {
-  display: block;
-  border-radius: 0 0 50px;
+    display: block;
+    border-radius: 0 0 50px;
 }
 
 #fellows .fellow .card-panel .info-container .heading h4 {
-  display: table-cell;
-  margin: 0;
-  padding: 10px 0 0 15px;
-  vertical-align: bottom;
+    display: table-cell;
+    margin: 0;
+    padding: 10px 0 0 15px;
+    vertical-align: bottom;
 }
 
 #fellows .fellow .card-panel .info-container p {
-  margin: 0;
-  padding: 0 5px 30px;
-  line-height: 1.2;
+    margin: 0;
+    padding: 0 5px 30px;
+    line-height: 1.2;
 }
 
 #fellows .fellow .card-panel .contact {
-  padding: 15px 15px 15px 20px;
-  margin: 0;
-  background-color: rgba(0, 0, 0, 0.05);
-  clear: both;
+    padding: 15px 15px 15px 20px;
+    margin: 0;
+    background-color: rgba(0, 0, 0, 0.05);
+    clear: both;
 }
 
 #fellows .fellow .card-panel .contact .col {
-  padding: 0;
+    padding: 0;
 }
 
 #fellows .fellow .card-panel .contact li {
-  display: inline;
+    display: inline;
 }
 
 #aptigram {
-  background-color: #784e90;
+    background-color: #784e90;
 }
 
 #aptigram h2 {
-  transform: rotate(-2deg);
+    transform: rotate(-2deg);
 }
 
 #aptigram .container {
-  width: 100%;
+    width: 100%;
 }
 
 #aptigram .polaroids a {
-  -webkit-transition: -webkit-transform 0.15s linear;
-  -webkit-box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
-  background-color: #fff !important;
-  display: block;
-  width: auto;
-  padding: 10px 10px 15px;
-  font-family: 'Gloria Hallelujah', cursive;
-  text-decoration: none;
-  text-align: left;
-  color: #333;
-  font-size: 14px;
-  -webkit-transform: rotate(-2deg);
-  -moz-transform: rotate(-2deg);
-  transform: rotate(-2deg);
+    -webkit-transition: -webkit-transform 0.15s linear;
+    -webkit-box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
+    background-color: #fff !important;
+    display: block;
+    width: auto;
+    padding: 10px 10px 15px;
+    font-family: 'Gloria Hallelujah', cursive;
+    text-decoration: none;
+    text-align: left;
+    color: #333;
+    font-size: 14px;
+    -webkit-transform: rotate(-2deg);
+    -moz-transform: rotate(-2deg);
+    transform: rotate(-2deg);
 }
 
 #aptigram .polaroids a:hover {
-  -webkit-transform: scale(1.25) !important;
-  -moz-transform: scale(1.25) !important;
-  transform: scale(1.25) !important;
-  position: relative;
-  z-index: 5;
+    -webkit-transform: scale(1.25) !important;
+    -moz-transform: scale(1.25) !important;
+    transform: scale(1.25) !important;
+    position: relative;
+    z-index: 5;
 }
 
 #aptigram .polaroids a:after {
-  content: attr(title);
-  display: block;
-  max-width: 200px;
-  padding-left: 5px;
-  text-align: left;
+    content: attr(title);
+    display: block;
+    max-width: 200px;
+    padding-left: 5px;
+    text-align: left;
 }
 
 #aptigram .polaroids .polariod {
-  display: inline-block;
-  max-height: 300px;
-  padding: 0;
-  float: none;
+    display: inline-block;
+    max-height: 300px;
+    padding: 0;
+    float: none;
 }
 
 #aptigram .polaroids .polariod:nth-child(even) a {
-  -webkit-transform: rotate(2deg);
-  -moz-transform: rotate(2deg);
-  transform: rotate(2deg);
+    -webkit-transform: rotate(2deg);
+    -moz-transform: rotate(2deg);
+    transform: rotate(2deg);
 }
 
 #aptigram .polaroids .polariod:nth-child(3n) a {
-  -webkit-transform: none;
-  -moz-transform: none;
-  transform: none;
-  position: relative;
-  top: -5px;
+    -webkit-transform: none;
+    -moz-transform: none;
+    transform: none;
+    position: relative;
+    top: -5px;
 }
 
 #aptigram .polaroids .polariod:nth-child(5n) a {
-  -webkit-transform: rotate(5deg);
-  -moz-transform: rotate(5deg);
-  transform: rotate(5deg);
-  position: relative;
-  right: 5px;
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+    transform: rotate(5deg);
+    position: relative;
+    right: 5px;
 }
 
 #aptigram .polaroids .polariod:nth-child(8n) a {
-  position: relative;
-  top: 8px;
-  right: 5px;
+    position: relative;
+    top: 8px;
+    right: 5px;
 }
 
 #aptigram .polaroids .polariod:nth-child(11n) a {
-  position: relative;
-  top: 3px;
-  left: -5px;
+    position: relative;
+    top: 3px;
+    left: -5px;
 }
 
 #aptigram .polaroids img {
-  max-width: 100%;
-  margin-bottom: 5px;
+    max-width: 100%;
+    margin-bottom: 5px;
 }
 
 #aptigram .polaroids .location {
-  display: block;
-  font-size: 10px;
-  text-align: left;
-  padding: 0 0 0 5px;
-  margin-bottom: 5px;
+    display: block;
+    font-size: 10px;
+    text-align: left;
+    padding: 0 0 0 5px;
+    margin-bottom: 5px;
 }
 
 .section-img-container {
-  width: auto;
-  margin-bottom: 1em;
+    width: auto;
+    margin-bottom: 1em;
 }
 
 .section-img {
-  float: none;
+    float: none;
 }
 
 .hidden-link {
-  color: #fff;
+    color: #fff;
 }
 
 .hidden-link:hover {
-  color: #e55;
+    color: #e55;
 }
 
 @media only screen and (max-width: 380px) {
-  main>section h2 {
-    margin-left: -0.75rem;
-    margin-right: -0.75rem;
-    letter-spacing: -3px;
-  }
+    main > section h2 {
+        margin-left: -0.75rem;
+        margin-right: -0.75rem;
+        letter-spacing: -3px;
+    }
 }
 
 @media only screen and (min-width: 540px) {
-  .section-img-container {
-    max-width: 60%;
-    float: left;
-    padding-right: 30px;
-  }
-  .section-img {
-    float: left;
-  }
+    .section-img-container {
+        max-width: 60%;
+        float: left;
+        padding-right: 30px;
+    }
+    .section-img {
+        float: left;
+    }
 }
