--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,250 +1,103 @@
-html {
-    font-size: 85%;
-    box-sizing: border-box;
-}
-
-*,
-:after,
-:before {
-    box-sizing: inherit;
-}
-
 body {
-    background-color: #333;
-    color: #fff;
-    -webkit-font-smoothing: antialiased;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  margin: 0;
 }
 
-section h2 {
-    margin-top: 20px;
-    text-align: center;
-    text-transform: lowercase;
-    font-family: sans-serif;
-    font-size: 80px;
-    text-shadow: 0 7px 0 rgba(0, 0, 0, 0.15);
-    -webkit-font-smoothing: initial;
+a {
+  color: #039be5;
 }
 
-#logo .responsive-img {
-    max-height: 280px;
-    margin: 40px auto 10px;
-    display: block;
-}
-
-#logo .links {
-    float: none;
-    width: auto;
-    margin-bottom: 30px;
-    margin-left: -20px;
-    margin-right: -20px;
-    padding: 0;
-}
-
-#logo .links img {
-    height: 50px;
-}
-
-#about {
-    background-color: #1e859a;
-}
-
-#about h2 {
-    -webkit-transform: rotate(1deg);
-    transform: rotate(1deg);
-}
-
-#aptitud-day {
-    background-color: #7a9752;
-}
-
-#aptitud-day h2 {
-    transform: rotate(-2deg);
-}
-
-#aptitud-day .card-panel {
-    background-color: #eee;
-    color: #000;
-}
-
-#fellows {
-    background-color: #f63;
-}
-
-#fellows h2 {
-    -webkit-transform: rotate(3deg);
-    transform: rotate(3deg);
-}
-
-#fellows #fellow-list {
-    margin: 0 0.75rem;
-    padding-bottom: 50px;
-}
-
-@media only screen and (min-width: 601px) {
-    #fellows #fellow-list {
-        column-count: 2;
-    }
-}
-
-@media only screen and (min-width: 901px) {
-    #fellows #fellow-list {
-        column-count: 3;
-    }
-}
-
-@media only screen and (min-width: 1200px) {
-    #fellows #fellow-list {
-        column-count: 4;
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-}
-
-#fellows .fellow {
-    display: inline-block;
-    vertical-align: bottom;
-}
-
-#fellows .fellow .card-panel {
-    overflow: hidden;
-    padding: 0;
-    background-color: #eee;
-    color: #000;
-}
-
-#fellows .fellow .card-panel .info-container .info {
-    padding: 15px 15px 0;
-    margin-bottom: 0;
-}
-
-#fellows .fellow .card-panel .info-container .heading {
-    display: table;
-    margin: -15px 0 15px -15px;
-}
-
-#fellows .fellow .card-panel .info-container .heading div {
-    display: table-cell;
-    width: 30%;
-}
-
-#fellows .fellow .card-panel .info-container .heading div img {
-    display: block;
-    border-radius: 0 0 50px;
-}
-
-#fellows .fellow .card-panel .info-container .heading h4 {
-    display: table-cell;
-    margin: 0;
-    padding: 10px 0 0 15px;
-    vertical-align: bottom;
-}
-
-#fellows .fellow .card-panel .info-container p {
-    margin: 0;
-    padding: 0 5px 30px;
-    line-height: 1.2;
-}
-
-#fellows .fellow .card-panel .contact {
-    padding: 15px 15px 15px 20px;
-    margin: 0;
-    background-color: rgba(0, 0, 0, 0.05);
-    clear: both;
-}
-
-#fellows .fellow .card-panel .contact .col {
-    padding: 0;
-}
-
-#fellows .fellow .card-panel .contact li {
-    display: inline;
+.polaroids {
+  text-align: center;
 }
 
 .polaroids a {
-    -webkit-transition: -webkit-transform 0.15s linear;
-    -webkit-box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
-    background-color: #fff !important;
-    display: block;
-    width: auto;
-    padding: 10px 10px 15px;
-    font-family: 'Gloria Hallelujah', cursive;
-    text-decoration: none;
-    text-align: left;
-    color: #333;
-    font-size: 14px;
-    -webkit-transform: rotate(-2deg);
-    -moz-transform: rotate(-2deg);
-    transform: rotate(-2deg);
+  -webkit-transition: -webkit-transform 0.15s linear;
+  -webkit-box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
+  background-color: #fff;
+  display: block;
+  width: auto;
+  padding: 10px 10px 15px;
+  font-family: 'Gloria Hallelujah', cursive;
+  text-decoration: none;
+  text-align: left;
+  color: #333;
+  font-size: 14px;
+  -webkit-transform: rotate(-2deg);
+  -moz-transform: rotate(-2deg);
+  transform: rotate(-2deg);
 }
 
 .polaroids a:hover {
-    -webkit-transform: scale(1.25) !important;
-    -moz-transform: scale(1.25) !important;
-    transform: scale(1.25) !important;
-    position: relative;
-    z-index: 5;
+  -webkit-transform: scale(1.25) !important;
+  -moz-transform: scale(1.25) !important;
+  transform: scale(1.25) !important;
+  position: relative;
+  z-index: 5;
 }
 
 .polaroids a:after {
-    content: attr(title);
-    display: block;
-    max-width: 200px;
-    padding-left: 5px;
-    text-align: left;
+  content: attr(title);
+  display: block;
+  max-width: 200px;
+  padding-left: 5px;
+  text-align: left;
 }
 
 .polaroids .polariod {
-    display: inline-block;
-    max-height: 200px;
-    padding: 0;
-    float: none;
+  display: inline-block;
+  max-height: 200px;
+  padding: 0;
+  float: none;
 }
 
 .polaroids .polariod:nth-child(even) a {
-    -webkit-transform: rotate(2deg);
-    -moz-transform: rotate(2deg);
-    transform: rotate(2deg);
+  -webkit-transform: rotate(2deg);
+  -moz-transform: rotate(2deg);
+  transform: rotate(2deg);
 }
 
 .polaroids .polariod:nth-child(3n) a {
-    -webkit-transform: none;
-    -moz-transform: none;
-    transform: none;
-    position: relative;
-    top: -5px;
+  -webkit-transform: none;
+  -moz-transform: none;
+  transform: none;
+  position: relative;
+  top: -5px;
 }
 
 .polaroids .polariod:nth-child(5n) a {
-    -webkit-transform: rotate(5deg);
-    -moz-transform: rotate(5deg);
-    transform: rotate(5deg);
-    position: relative;
-    right: 5px;
+  -webkit-transform: rotate(5deg);
+  -moz-transform: rotate(5deg);
+  transform: rotate(5deg);
+  position: relative;
+  right: 5px;
 }
 
 .polaroids .polariod:nth-child(8n) a {
-    position: relative;
-    top: 8px;
-    right: 5px;
+  position: relative;
+  top: 8px;
+  right: 5px;
 }
 
 .polaroids .polariod:nth-child(11n) a {
-    position: relative;
-    top: 3px;
-    left: -5px;
+  position: relative;
+  top: 3px;
+  left: -5px;
 }
 
 .polaroids img {
-    max-width: 200px;
-    margin-bottom: 5px;
+  max-width: 200px;
+  margin-bottom: 5px;
 }
 
 .polaroids .location {
-    display: block;
-    font-size: 10px;
-    text-align: left;
-    padding: 0 0 0 5px;
-    margin-bottom: 5px;
+  display: block;
+  font-size: 10px;
+  text-align: left;
+  padding: 0 0 0 5px;
+  margin-bottom: 5px;
 }
